--- a/src/assets/styles/tailwind-config.css
+++ b/src/assets/styles/tailwind-config.css
@@ -12,4 +12,12 @@
     font-size: 24px;
     font-weight: 600;
   }
+  .text-body-m {
+    font-size: 16px;
+    font-weight: 400;
+  }
+  .text-body-s {
+    font-size: 12px;
+    font-weight: 400;
+  }
 }
