--- a/src/assets/styles/tailwind-config.css
+++ b/src/assets/styles/tailwind-config.css
@@ -12,6 +12,14 @@
     font-size: 24px;
     font-weight: 600;
   }
+  .text-title-m {
+    font-size: 20px;
+    font-weight: 600;
+  }
+  .text-body-l {
+    font-size: 18px;
+    font-weight: 500;
+  }
   .text-body-m {
     font-size: 16px;
     font-weight: 400;
